security-lab/network-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: net-lab
spec:
  podSelector:
    matchLabels:
      role: backend      # backend Pod이 대상
  policyTypes:
  - Ingress             # 들어오는 트래픽 제어
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80
